# ChangeLog for dev-libs/apr-util
# Copyright 1999-2014 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/dev-libs/apr-util/ChangeLog,v 1.211 2014/09/22 07:05:12 polynomial-c Exp $

  17 Oct 2014; Harold Naparst <harold@alum.mit.edu> +apr-util-1.5.2.ebuild,
  +apr-util-1.5.3-r2.ebuild, +apr-util-1.5.4.ebuild,
  +files/apr-util-1.3.12-bdb-5.2.patch, +files/apr-util-1.5.3-berkdb6.patch,
  +files/apr-util-1.5.3-sysroot.patch, +metadata.xml:
  There is an error in upstream apr-util. Only one of mysql or postgres may 
  be chosen.

*apr-util-1.5.4 (22 Sep 2014)

  22 Sep 2014; Lars Wendler <polynomial-c@gentoo.org> +apr-util-1.5.4.ebuild:
  Version bump.

*apr-util-1.5.3-r2 (01 Aug 2014)

  01 Aug 2014; Lars Wendler <polynomial-c@gentoo.org>
  -apr-util-1.5.3-r1.ebuild, +apr-util-1.5.3-r2.ebuild:
  Fixed compilation with nss/openssl USE flag (bug #518708). Committed straight
  to stable.

  17 May 2014; Agostino Sarubbo <ago@gentoo.org> apr-util-1.5.3-r1.ebuild:
  Stable for alpha, wrt bug #504300

  14 May 2014; Agostino Sarubbo <ago@gentoo.org> apr-util-1.5.3-r1.ebuild:
  Stable for sparc, wrt bug #504300

  13 May 2014; Agostino Sarubbo <ago@gentoo.org> apr-util-1.5.3-r1.ebuild:
  Stable for ia64, wrt bug #504300

  20 Apr 2014; Agostino Sarubbo <ago@gentoo.org> apr-util-1.5.3-r1.ebuild:
  Stable for ppc64, wrt bug #504300

  13 Apr 2014; Agostino Sarubbo <ago@gentoo.org> apr-util-1.5.3-r1.ebuild:
  Stable for ppc, wrt bug #504300

  05 Apr 2014; Agostino Sarubbo <ago@gentoo.org> apr-util-1.5.3-r1.ebuild:
  Stable for x86, wrt bug #504300

  01 Apr 2014; Lars Wendler <polynomial-c@gentoo.org> apr-util-1.5.3-r1.ebuild:
  Added dependency on libtool (bug #506384).

  30 Mar 2014; Chema Alonso <nimiux@gentoo.org> apr-util-1.5.3-r1.ebuild:
  Stable for amd64 wrt bug #504300

  26 Mar 2014; Markus Meier <maekke@gentoo.org> apr-util-1.5.3-r1.ebuild:
  arm stable, bug #504300
